--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ I believe in constant growth, collaborative learning, and doing things with hear
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#projects">Photos</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
