links to locations added

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ I’m passionate about building things that blend tech and creativity, whether i
 
 Outside of code, you’ll usually find me on the basketball court, binging mangas and otome isekai, or dreaming up short film ideas that explore emotion and resilience.
 
-I believe in constant growth, collaborative learning, and doing things with heart
+I believe in constant growth, collaborative learning, and doing things with heart.
             </p>
           </div>
         </div>
@@ -129,11 +129,11 @@ I believe in constant growth, collaborative learning, and doing things with hear
             <div class="article-container">
               <img
                 src="./assets/photo-1.jpeg"
-                alt="Project 1"
+                alt="Janakpuri West"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Photo One</h2>
+            <h2 class="experience-sub-title project-title"> The Metro Life</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -142,9 +142,9 @@ I believe in constant growth, collaborative learning, and doing things with hear
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.instagram.com/g_pallavi_07/'"
+                onclick="location.href='https://www.google.com/maps/place/Janakpuri+West/@28.6294747,77.0751951,17z/data=!3m1!4b1!4m6!3m5!1s0x390d04c0f23874db:0x7f63d009f51b7a06!8m2!3d28.62947!4d77.07777!16s%2Fm%2F0c3vph9?entry=ttu&g_ep=EgoyMDI1MDgzMC4wIKXMDSoASAFQAw%3D%3D'"
               >
-                On Instagram
+                Location
               </button>
             </div>
           </div>
@@ -152,22 +152,22 @@ I believe in constant growth, collaborative learning, and doing things with hear
             <div class="article-container">
               <img
                 src="./assets/photo-2.jpeg"
-                alt="Project 2"
+                alt="Shankar Vihar"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Photo Two</h2>
+            <h2 class="experience-sub-title project-title">Under The Setting Sun</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('./assets/photo-1.jpeg')"              >
+                onclick="window.open('./assets/photo-2.jpeg')"              >
                 Photo
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.instagram.com/g_pallavi_07/'"
+                onclick="location.href='https://www.google.com/maps/place/Shankar+Vihar,+New+Delhi,+Delhi/@28.564471,77.145121,15z/data=!3m1!4b1!4m6!3m5!1s0x390d1c5385d506df:0x9766a8db178a4892!8m2!3d28.5661066!4d77.1399583!16s%2Fm%2F03cbts0?entry=ttu&g_ep=EgoyMDI1MDgzMC4wIKXMDSoASAFQAw%3D%3D'"
               >
-                On Instagram
+                Location
               </button>
             </div>
           </div>
@@ -175,11 +175,11 @@ I believe in constant growth, collaborative learning, and doing things with hear
             <div class="article-container">
               <img
                 src="./assets/photo-3.jpeg"
-                alt="Project 3"
+                alt="Jatayu Park"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Photo Three</h2>
+            <h2 class="experience-sub-title project-title">The Fallen Flight</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -188,9 +188,78 @@ I believe in constant growth, collaborative learning, and doing things with hear
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.instagram.com/g_pallavi_07/'"
+                onclick="location.href='https://www.google.com/maps/place/Jatayu+Adventure+Center/@8.860567,76.8641805,17z/data=!4m14!1m7!3m6!1s0x3b05ddd5ea2b9599:0x77a24d56f5a90c70!2sJatayu+Earth&#39;s+Center!8m2!3d8.8608338!4d76.8663916!16s%2Fg%2F11bx55ybvv!3m5!1s0x3b05ddd159b24d73:0xbe5bfefca8f1f0ea!8m2!3d8.860567!4d76.8663692!16s%2Fg%2F11g8tqp6mk?entry=ttu&g_ep=EgoyMDI1MDgzMC4wIKXMDSoASAFQAw%3D%3D'"
               >
-                On Instagram
+                Location
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/photo-4.jpeg"
+                alt="Padmanabhswamy Temple"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Reflections of Faith</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('./assets/photo-4.jpeg')"              >
+                Photo
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://www.google.com/maps/place/Sree+Padmanabhaswamy+Temple/@8.4827819,76.9423552,18z/data=!4m10!1m2!2m1!1sPadmanabhaswamy+Temple+!3m6!1s0x3b05bb09b7e81d35:0x1d2fedb7213a1ef7!8m2!3d8.4827779!4d76.9435906!15sChZQYWRtYW5hYmhhc3dhbXkgVGVtcGxlWhgiFnBhZG1hbmFiaGFzd2FteSB0ZW1wbGWSAQxoaW5kdV90ZW1wbGWqAT4QATIeEAEiGiHBxIGCnRc_QDk1YPgk1b0KjH4TGb7CDdreMhoQAiIWcGFkbWFuYWJoYXN3YW15IHRlbXBsZeABAA!16zL20vMDdmMGt0?entry=ttu&g_ep=EgoyMDI1MDgzMC4wIKXMDSoASAFQAw%3D%3D'"
+              >
+                Location
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/photo-5.jpeg"
+                alt="Neemarana Fort"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Echoes Of The Fort</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('./assets/photo-5.jpeg')"              >
+                Photo
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://www.google.com/maps/place/Neemrana+Fort-Palace+-+15th+Century,+Delhi-Jaipur+Highway/@27.9939425,76.3882433,17z/data=!4m9!3m8!1s0x3912ab350b1661cf:0x3a7316188a19f5ee!5m2!4m1!1i2!8m2!3d27.9939425!4d76.3882433!16s%2Fg%2F1tcw6kxh?entry=ttu&g_ep=EgoyMDI1MDgzMC4wIKXMDSoASAFQAw%3D%3D'"
+              >
+                Location
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/photo-6.jpeg"
+                alt="House Boat"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Backwater Lullaby</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('./assets/photo-6.jpeg')"              >
+                Photo
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://www.google.com/maps/place/Alleppey+Houseboats+%7C+Alleppey+Boat+House+-+Waves+and+Dales+Alleppey+Houseboat/@9.5004923,76.0587976,10z/data=!4m10!1m2!2m1!1shouse+boat+in+kerala!3m6!1s0x3b088418062069af:0x69b8feca50164fd3!8m2!3d9.5004923!4d76.338949!15sChRob3VzZSBib2F0IGluIGtlcmFsYVoWIhRob3VzZSBib2F0IGluIGtlcmFsYZIBGGhvdXNlYm9hdF9yZW50YWxfc2VydmljZaoBYQoIL20vMDE5amQKCS9tLzAzX3lqNxABKg4iCmhvdXNlIGJvYXQoADIeEAEiGo201Jp1UorPXzcpKbmSa82i5P0ATz-Q4tqiMhgQAiIUaG91c2UgYm9hdCBpbiBrZXJhbGHgAQA!16s%2Fg%2F11f3nm808_?entry=ttu&g_ep=EgoyMDI1MDgzMC4wIKXMDSoASAFQAw%3D%3D'"
+              >
+                Location
               </button>
             </div>
           </div>
@@ -199,12 +268,7 @@ I believe in constant growth, collaborative learning, and doing things with hear
           
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
+    
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
